# Cheaters-Dilemma

./: .gitignore
backend/: NETWORK_CONFIG.md  demo_flow.py  demo_with_new_features.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: cheater.py  warlord.py
backend/app/api/routes/: __init__.py  agents.py  replay.py  simulation.py  wallets.py
backend/app/api/schemas/: __init__.py  simulation.py  wallets.py
backend/app/api/tests/: test_simulation_summary.py
backend/app/core/: config.py  events.py  logger.py
backend/app/domain/: agent.py  models.py  resolver.py  world.py
backend/app/services/: analytics_service.py  blockchain_service.py  metrics_service.py  simulation_service.py
backend/data/: agent_wallets_seed42.json  dilemma_token_metadata_seed42.json  simulation_results_demo_seed42.json  simulation_seed42_agents5_turns100.json  simulation_with_new_features_seed42.json
backend/replays/: f538349b-c721-425c-8682-dce7b5f3ae03.json
backend/scripts/: content.txt  demo_deploy.py  deploy_via_nadfun.py  manual_deploy_token.py  run.py  verify_token.py  wallet_generator.py
contracts/: DilemmaToken.sol
docs/: 00_overview.md  01_vision_and_theory.md  02_system_architecture.md  03_agents_and_game_mechanics.md  04_simulation_and_economy.md  05_governance_power_and_conflict.md  06_codebase_guide.md  07_running_and_deployment.md  08_extending_and_research.md  09_limitations_and_roadmap.md
frontend/: .env.example  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AgentCard.tsx  FinalResults.tsx  GameBoard.tsx  (+4 more)
(+10 files in other folders)
